--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Job\Job2_Dancer.txt - Added Some various npc's. [Muad_Dib]
+- Job\Job2_Bard.txt - Updated Bard Jobchange Location. [Muad_Dib]
+- Town\Town_Lutie.txt - Updated various npc's. [Muad_Dib]
 - Job\Job2_Dancer.txt - Added Dancer Jobchange script. [Muad_Dib]
 - Job\Job2_Bard.txt - Added Bard Jobchange Script. [Muad_Dib]
 - Job\Job2_Dancer - Bard.txt - Removed this script. [Muad_Dib]
