--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- GvG\gefg_cas0#.txt - Fixed mes error. [Muad_Dib]
+- GvG\payg_cas0#.txt - Fixed mes error. [Muad_Dib]
+- GvG\aldeg_cas0#.txt - Fixed mes error. [Muad_Dib]
 - GvG\prtg_cas0#.txt - Fixed mes error. [Tsusai]
 - Job\Job2_Dancer.txt - Added Some various npc's. [Muad_Dib]
 - Job\Job2_Bard.txt - Updated Bard Jobchange Location. [Muad_Dib]
