*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2077 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Guide.txt - Updated Comodo Guides. [Muad_Dib]
+- Town\Town_Kafra.txt - Updated Comodo Kafra. [Muad_Dib]
+- Town\Town_Comodo.txt - Updated Town Comodo. [Muad_Dib]
 - shop\morocc.txt - Updated Morroc Jeweler. [Muad_Dib]
 - GvG\gefg_cas0#.txt - Fixed mes error. [Muad_Dib]
 - GvG\payg_cas0#.txt - Fixed mes error. [Muad_Dib]
