- Mob\\field\\xmas_fld.txt - Added Hatii Baby. [Muad_Dib] - Mob\\dungeon\\xmas_dun.txt - Added Hatii Baby. [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2080 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+
+- Mob\field\xmas_fld.txt - Added Hatii Baby. 2004/05/21 [Muad_Dib]
+- Mob\dungeon\xmas_dun.txt - Added Hatii Baby. 2004/05/21 [Muad_Dib]
 - Town\Town_Guide.txt - Updated Comodo Guides. [Muad_Dib]
 - Town\Town_Kafra.txt - Updated Comodo Kafra. [Muad_Dib]
 - Town\Town_Comodo.txt - Updated Town Comodo. [Muad_Dib]
