--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- 05-28-04: Event\Event_ClockTower.txt - Made Boy not to display [Gatekeeper Riku]. [Tsusai]
 - 05-27-04: Town\Town_Juno.txt - Updated the Juno soldiers. [Tezuka]
 - 05-26-04: Town\Town_Guide.txt - Added the Gonryun guide translated by Saister. [Muad_Dib]
 - 05-25-04: Mob\field\gef_fild.txt - Added Goblin Leader. [Muad_Dib]
