--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -10,3 +10,5 @@
  Fusion 1.212
 ----------------------------------------------------------------------------------------------------
  - 2004-06-02: Added changelog.txt file. [AlexKreuz]
+ - 2004-06-02: Added Casion Games folder - Scripts\Custom\Casino Games [Yun Qi]
+ - 2004-06-02: Added Russian Roulette script - Scripts\Custom\Casino Games\Russian_Roulette.txt [Yun Qi]
