--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -11,4 +11,5 @@
 ----------------------------------------------------------------------------------------------------
  - 2004-06-02: Added changelog.txt file. [AlexKreuz]
  - 2004-06-02: Added Casion Games folder - Scripts\Custom\Casino Games [Yun Qi]
- - 2004-06-02: Added Russian Roulette script - Scripts\Custom\Casino Games\Russian_Roulette.txt [Yun Qi]
+ - 2004-06-02: Added Russian Roulette script (ENG) - Scripts\Custom\Casino Games\Russian_Roulette.txt [Yun Qi]
+ - 2004-06-03: Added Russian Roulette script (SPN) - Scripts\Custom\Casino Games\Russian_Roulette_SPN.txt [Yun Qi]
