--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -9,7 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion 1.212
 ----------------------------------------------------------------------------------------------------
- - 2004-06-02: Added "Healers" folder - Scripts\Custom\Healers [Yun Qi]
+ - 2004-06-03: Added 550z Prontera Healer script (ENG) - Healers\Prontera\Cricket-550z.txt [Yun Qi]
+ - 2004-06-03: Added "Healers" folder - Scripts\Custom\Healers [Yun Qi]
  - 2004-06-03: Added Russian Roulette script (SPN) - Casino Games\Russian_Roulette_SPN.txt [Yun Qi]
  - 2004-06-02: Added Russian Roulette script (ENG) - Casino Games\Russian_Roulette.txt [Yun Qi]
  - 2004-06-02: Added "Casion Games" folder - Scripts\Custom\Casino Games [Yun Qi]
