*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2105 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -9,8 +9,10 @@
 ----------------------------------------------------------------------------------------------------
  Fusion 1.212
 ----------------------------------------------------------------------------------------------------
- - 2004-06-03: Added free Prontera Healer script (ENG) - Healers\Prontera\Cricket-free.txt [Yun Qi]
- - 2004-06-03: Added 550z Prontera Healer script (ENG) - Healers\Prontera\Cricket-550z.txt [Yun Qi]
+ - 2004-06-03: Added free Prontera Hair Stylist script (ENG) - Hair Stylists\Ashley.txt [Yun Qi]
+ - 2004-06-03: Added "Hair Stylists" folder - Scripts\Custom\Hair Stylists [Yun Qi]
+ - 2004-06-03: Added free Prontera Healer script (ENG) - Healers\Cricket-free.txt [Yun Qi]
+ - 2004-06-03: Added 550z Prontera Healer script (ENG) - Healers\Cricket-550z.txt [Yun Qi]
  - 2004-06-03: Added "Healers" folder - Scripts\Custom\Healers [Yun Qi]
  - 2004-06-03: Added Russian Roulette script (SPN) - Casino Games\Russian_Roulette_SPN.txt [Yun Qi]
  - 2004-06-02: Added Russian Roulette script (ENG) - Casino Games\Russian_Roulette.txt [Yun Qi]
