--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion 1.212
 ----------------------------------------------------------------------------------------------------
+ - 2004-06-03: Added 550z Prontera Healer script (SPN) - Healers\Cricket-550z_SPN.txt [Yun Qi]
  - 2004-06-03: Added free Prontera Hair Stylist script (ENG) - Hair Stylists\Ashley.txt [Yun Qi]
  - 2004-06-03: Added "Hair Stylists" folder - Scripts\Custom\Hair Stylists [Yun Qi]
  - 2004-06-03: Added free Prontera Healer script (ENG) - Healers\Cricket-free.txt [Yun Qi]
