*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2109 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion 1.212
 ----------------------------------------------------------------------------------------------------
+ - 06-04-04: Edited Hair Stylists\Ashley.txt - Corrected a spelling error. [Yun Qi]
  - 06-03-04: Added 550z Prontera Healer script (SPN) - Healers\Cricket-550z_SPN.txt [Yun Qi]
  - 06-03-04: Added free Prontera Hair Stylist script (ENG) - Hair Stylists\Ashley.txt [Yun Qi]
  - 06-03-04: Added "Hair Stylists" folder - Scripts\Custom\Hair Stylists [Yun Qi]
