6-08-04 <Town\\Town_Lutie.txt> - added some variables for bard quest.
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2126 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005 (Fusion 1.212)
 ----------------------------------------------------------------------------------------------------
+- 06-08-04: Town\Town_Lutie.txt - added some variables for bard quest. [nestor_zulueta]
 - 06-05-04: Job\Job2_Knight.txt - Few tuneups. [Tsusai]
 - 06-05-04: Event\Event_Making.txt - Added a missing "; to the zic npc. [Muad_Dib]
 - 06-05-04: Event\Event_ClockTower.txt - Updated the 2 guardians. [Muad_Dib]
