--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion 1.212
 ----------------------------------------------------------------------------------------------------
+ - 06-08-04: Added Samurai Warpers script (ENG) - Warpers\SamuraiWarpers_100+300.txt [Yun Qi]
+ - 06-08-04: Added "Warpers" folder - Scripts\Custom\Warpers [Yun Qi]
  - 06-06-04: Added Prontera Pet Food shop (ENG) - Shops\PetCo_food.txt [Yun Qi]
  - 06-06-04: Added "Shops" folder - Scripts\Custom\Shops [Yun Qi]
  - 06-05-04: Added 40z Prontera Hair Stylist script (ENG) - Hair Stylists\Ashley-40z.txt [Yun Qi]
