- 06-08-04: Warp\\dungeons\\Glast_Heim.txt - Fixed random warp until OnTouch is made. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2134 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005 (Fusion 1.212)
 ----------------------------------------------------------------------------------------------------
+- 06-08-04: Warp\dungeons\Glast_Heim.txt - Fixed random warp until OnTouch is made. [Tsusai]
 - 06-08-04: Warp\dungeons\ClockTower.txt - Added jAthena version, including missing random warps. [Tsusai]
 - 06-08-04: Warp\dungeons\c_tower.txt - Moved to archive. [Tsusai]
 - 06-08-04: Warp\dungeons\alde_dun.txt - Moved to archive. [Tsusai]
