--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005 (Fusion 1.212)
 ----------------------------------------------------------------------------------------------------
+- 06-08-04: Event\Event_Bunny.txt - Added other town NPCs but disabled for users to activate. [Tsusai]
+- 06-08-04: Archive\Event_Bunny.txt - Removed [Tsusai]
 - 06-08-04: Warp\dungeons\Glast_Heim.txt - Fixed random warp until OnTouch is made. [Tsusai]
 - 06-08-04: Warp\dungeons\ClockTower.txt - Added jAthena version, including missing random warps. [Tsusai]
 - 06-08-04: Warp\dungeons\c_tower.txt - Moved to archive. [Tsusai]
