--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -1,11 +1,13 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+ - 06-11-04: Added Free Stat & Skill Resetter - Stat and Skill Resetters\Dai-In-free.txt . [Yun Qi]
+ - 06-11-04: Added "Stat and Skill Resetters" folder - Scripts\Custom Scripts\Stat and Skill Resetters. [Yun Qi]
  - 06-10-04: Added 40z Prontera Hair Stylist script (ENG) - Hair Stylists\Ashley-40z_input.txt. [Yun Qi]
  - 06-08-04: Added Samurai Warpers script (ENG) - Warpers\SamuraiWarpers_100+300.txt. [Yun Qi]
- - 06-08-04: Added "Warpers" folder - Scripts\Custom\Warpers. [Yun Qi]
+ - 06-08-04: Added "Warpers" folder - Scripts\Custom Scripts\Warpers. [Yun Qi]
  - 06-06-04: Added Prontera Pet Food shop (ENG) - Shops\PetCo_food.txt. [Yun Qi]
- - 06-06-04: Added "Shops" folder - Scripts\Custom\Shops. [Yun Qi]
+ - 06-06-04: Added "Shops" folder - Scripts\Custom Scripts\Shops. [Yun Qi]
  - 06-05-04: Added 40z Prontera Hair Stylist script (ENG) - Hair Stylists\Ashley-40z.txt. [Yun Qi]
  - 06-05-04: Renamed Hair Stylists\Ashley.txt to Ashley-free.txt. [Yun Qi]
  - 06-05-04: Edited Hair Stylists\Ashley.txt - Major overhall. [Yun Qi]
@@ -13,11 +15,11 @@
  - 06-04-04: Edited Hair Stylists\Ashley.txt - Corrected a spelling error. [Yun Qi]
  - 06-04-04: Added 550z Prontera Healer script (SPN) - Healers\Cricket-550z_SPN.txt. [Yun Qi]
  - 06-04-04: Added free Prontera Hair Stylist script (ENG) - Hair Stylists\Ashley.txt. [Yun Qi]
- - 06-04-04: Added "Hair Stylists" folder - Scripts\Custom\Hair Stylists. [Yun Qi]
+ - 06-04-04: Added "Hair Stylists" folder - Scripts\Custom Scripts\Hair Stylists. [Yun Qi]
  - 06-03-04: Added free Prontera Healer script (ENG) - Healers\Cricket-free.txt. [Yun Qi]
  - 06-03-04: Added 550z Prontera Healer script (ENG) - Healers\Cricket-550z.txt. [Yun Qi]
- - 06-03-04: Added "Healers" folder - Scripts\Custom\Healers. [Yun Qi]
+ - 06-03-04: Added "Healers" folder - Scripts\Custom Scripts\Healers. [Yun Qi]
  - 06-03-04: Added Russian Roulette script (SPN) - Casino Games\Russian_Roulette_SPN.txt. [Yun Qi]
  - 06-02-04: Added Russian Roulette script (ENG) - Casino Games\Russian_Roulette.txt. [Yun Qi]
- - 06-02-04: Added "Casion Games" folder - Scripts\Custom\Casino Games. [Yun Qi]
+ - 06-02-04: Added "Casion Games" folder - Scripts\Custom Scripts\Casino Games. [Yun Qi]
  - 06-02-04: Added changelog.txt file. [AlexKreuz]
