--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-12-04: Shop\umbala.txt - added OFFICIAL shops from jAthena. [Tsusai]
 - 06-10-04: Warp\other\PvP.txt - Updated top header. [Tsusai]
 - 06-10-04: Warp\guilds\aldeg_cas.txt - Replaced a warp with a random warp. [Tsusai]
 - 06-10-04: Warp\dungeons\prt_maze.txt - Replaced with jAthena's for more warps and difficulty like official RO's. [Tsusai]
