--- a/Scripts/Japanese Scripts/Changelog.txt
+++ b/Scripts/Japanese Scripts/Changelog.txt
@@ -1,7 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
-- 06-12-04: Disabled npc header lines to avoid unneeded errors
+- 06-12-04: Ported the town_umbala, translation needed now [Tsusai]
+- 06-12-04: Disabled npc header lines to avoid unneeded errors [Tsusai]
 - 06-12-04: Removed npc_ctower [Muad_Dib]
 - 06-12-04: updated untranslated town_umbala [Muad_Dib]
 - 06-12-04: added untranslated npc_job_sage [Muad_Dib]
