--- a/Scripts/Japanese Scripts/Changelog.txt
+++ b/Scripts/Japanese Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-14-04: Rempoved translated town_gonryun [Muad_Dib]
 - 06-12-04: Ported the town_umbala, translation needed now [Tsusai]
 - 06-12-04: Disabled npc header lines to avoid unneeded errors [Tsusai]
 - 06-12-04: Removed npc_ctower [Muad_Dib]
