--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-14-04: Town\Town_Gonryun.txt - Activated npc emotions. [Muad_Dib]
+- 06-14-04: Town\Town_Siglude.txt - Added npc emotions. [Muad_Dib]
 - 06-14-04: Town\Town_Guide.txt - Added the Juno Guide. [Muad_Dib]
 - 06-14-04: Town\Town_Juno.txt - Updated Town Juno and moved the guide to Town_Guide.txt. [Muad_Dib]
 - 06-14-04: Town\Town_Guide.txt - Updated Town Gon Ryune Guide. [Muad_Dib]
