- 06-15-04: Job\\Novice\\Job_Super_Novice.txt - Added offical Super Novice Quest. [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2165 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-15-04: Job\Novice\Job_Super_Novice.txt - Added offical Super Novice Quest. [Muad_Dib]
 - 06-14-04: Town\Town_Gonryun.txt - Activated npc emotions. [Muad_Dib]
 - 06-14-04: Town\Town_Siglude.txt - Added npc emotions. [Muad_Dib]
 - 06-14-04: Town\Town_Guide.txt - Added the Juno Guide. [Muad_Dib]
